--- a/home.css
+++ b/home.css
@@ -15,28 +15,44 @@ html {
     display:flex;
 
   }
+/* /////////////////////////////PARALAX///////////////////////////////////////////// */
 
   /* DEMO-SPECIFIC STYLES */
 .typewriter h1 {
-    color: black;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid blueviolet; /* The typwriter cursor */
+    border-right: .15em solid blue; /* The typewriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
-      typing 3.5s steps(30, end),
-      blink-caret .5s step-end infinite;
-  }
-  
-  /* The typing effect */
-  @keyframes typing {
+        typing 3.5s steps(40, end),
+        blink-caret .75s step-end infinite 3.5s, /* Start blinking after typing */
+        stop-caret 0s 7s forwards; /* Stop blinking after total time */
+}
+
+/* The typing effect */
+@keyframes typing {
     from { width: 0 }
     to { width: 100% }
-  }
-  
-  /* The typewriter cursor effect */
-  @keyframes blink-caret {
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: blueviolet }
-  }
+    50% { border-color: blue; }
+}
+
+/* Stop the cursor blinking */
+@keyframes stop-caret {
+    to { border-color: transparent; }
+}
+
+.type1 {
+display:flex;
+justify-content: center;
+}
+
+.name1{
+display:flex;
+justify-content: center;
+}
