--- a/home.css
+++ b/home.css
@@ -20,7 +20,7 @@ html {
   }
 /* /////////////////////////////PARALAX///////////////////////////////////////////// */
     .parallax {
-    background-image: url("/Users/nkechi7/Documents/GitHub/kechi7.github.io/purpleTrainGif.gif");
+    /* background-image: url("/Users/nkechi7/Documents/GitHub/kechi7.github.io/purpleTrainGif.gif"); */
     min-height: 800px;
     background-attachment: fixed;
     background-position: center;
